Added line to clarify clickability.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
   </div>
 
 {% else %}
-
+  <p>This is the Standing Orders Committee website for compiling and displaying motions for the Green Party conference. Click on a motion to view the text and other information.</p>
   <div class="row front-page">
   {% if site.create_sections == true %}
     {% for section in site.data.sections %}
