removed /agenda suffix!

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
               {% assign label = "" %}
           {% endcase %}
             <li class="my-1">
-              <a data-bs-placement="right" data-bs-toggle="tooltip" data-bs-custom-class="tooltip-{{ motion.status }}" title="{{ label }}" href="{{ site.baseurl }}{{ motion.url }}" class="d-inline-flex align-items-start text-decoration-none">
+              <a data-bs-placement="right" data-bs-toggle="tooltip" data-bs-custom-class="tooltip-{{ motion.status }}" title="{{ label }}" href="{{ motion.url }}" class="d-inline-flex align-items-start text-decoration-none">
                 <span class="motion-code pe-2 ">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.number < 10 %}0{% endif %}{{ motion.number }}</span>
                 <span class="motion-title {{ motion.status }}">{{ motion.title }}</span>
               </a>
@@ -62,7 +62,7 @@ layout: default
             {% assign label = "" %}
         {% endcase %}
           <li class="mb-2">
-            <a data-bs-placement="right" data-bs-toggle="tooltip" data-bs-custom-class="tooltip-{{ motion.status }}" title="{{ label }}" href="{{ site.baseurl }}{{ motion.url }}" class="d-inline-flex align-items-start text-decoration-none">
+            <a data-bs-placement="right" data-bs-toggle="tooltip" data-bs-custom-class="tooltip-{{ motion.status }}" title="{{ label }}" href="{{ motion.url }}" class="d-inline-flex align-items-start text-decoration-none">
               <span class="motion-code pe-2 ">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.number < 10 %}0{% endif %}{{ motion.number }}</span>
               <span class="motion-title {{ motion.status }}">{{ motion.title }}</span>
             </a>
