formalised motion codes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
   <div class="row front-page">
   {% if site.create_sections == true %}
     {% for section in site.data.sections %}
-      {% assign motions = site.motions | where: "section" , section.code | sort: "number" %}
+      {% assign motions = site.motions | where: "motion_code.section" , section.code | sort: "motion_code.number" %}
       <div class="col-lg-4 column">
         <p class="section-name mb-0 fw-bold">{{section.name}}</p>
         <ul class="list-unstyled">
@@ -35,7 +35,7 @@ layout: default
           {% endcase %}
             <li class="my-1">
               <a data-bs-placement="right" data-bs-toggle="tooltip" data-bs-custom-class="tooltip-{{ motion.status }}" title="{{ label }}" href="{{ motion.url }}" class="d-inline-flex align-items-start text-decoration-none">
-                <span class="motion-code pe-2 ">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.number < 10 %}0{% endif %}{{ motion.number }}</span>
+                <span class="motion-code pe-2 ">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.motion_code.number < 10 %}0{% endif %}{{ motion.motion_code.number }}</span>
                 <span class="motion-title {{ motion.status }}">{{ motion.title }}</span>
               </a>
             </li>
@@ -63,12 +63,12 @@ layout: default
         {% endcase %}
           <li class="mb-2">
             <a data-bs-placement="right" data-bs-toggle="tooltip" data-bs-custom-class="tooltip-{{ motion.status }}" title="{{ label }}" href="{{ motion.url }}" class="d-inline-flex align-items-start text-decoration-none">
-              <span class="motion-code pe-2 ">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.number < 10 %}0{% endif %}{{ motion.number }}</span>
+              <span class="motion-code pe-2 ">#{% unless section.code.size > 3 %}{{ section.code }}{% endunless %}{% if section.code.size > 1 %}&nbsp;{% endif %}{% if motion.motion_code.number < 10 %}0{% endif %}{{ motion.motion_code.number }}</span>
               <span class="motion-title {{ motion.status }}">{{ motion.title }}</span>
             </a>
           </li>
 
-          {% if motion.number == 27 or motion.number == 53 %}
+          {% if motion.motion_code.number == 27 or motion.motion_code.number == 53 %}
             </ul>
             </div>
             <div class="col-lg-4 column">
