--- a/admin/index.html
+++ b/admin/index.html
@@ -25,7 +25,7 @@
               widget: 'string'
             },
             {
-              name: 'details',
+              name: 'detail',
               label: 'Details',
               widget: 'markdown'
             }
