--- a/admin/index.html
+++ b/admin/index.html
@@ -26,7 +26,7 @@
             },
             {
               name: 'detail',
-              label: 'Details',
+              label: 'Detail',
               widget: 'markdown'
             }
           ],
