--- a/admin/index.html
+++ b/admin/index.html
@@ -11,7 +11,7 @@
     <!-- Include the script that builds the page and powers Decap CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <script> 
-      CMS.registerPreviewStyle("/admin_styles.css");
+      CMS.registerPreviewStyle("admin_styles.css");
     </script>
     <script>
       
