--- a/admin/index.html
+++ b/admin/index.html
@@ -11,8 +11,10 @@
     <!-- Include the script that builds the page and powers Decap CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <script>
-        CMS.registerPreviewStyle("/admin_styles.css");
-      
+      import CMS from 'netlify-cms';
+      CMS.registerPreviewStyle("/admin_styles.css");
+    </script>
+    <script>      
         CMS.registerEditorComponent({
           // Internal id of the component
           id: "amendment",
