--- a/admin/index.html
+++ b/admin/index.html
@@ -10,9 +10,6 @@
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-    <script>
-      CMS.madeupfunction("/fubar.css");
-    </script>
     <script>      
         CMS.registerEditorComponent({
           // Internal id of the component
@@ -74,6 +71,9 @@
           }
         });
 
+    </script>
+    <script>
+      CMS.registerPreviewStyle("admin_styles.css");
     </script>
   </body>
 </html>
