--- a/admin/index.html
+++ b/admin/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-    <script>      
+    <!-- <script>      
         CMS.registerEditorComponent({
           // Internal id of the component
           id: "amendment",
@@ -74,6 +74,6 @@
     </script>
     <script>
       CMS.registerPreviewStyle("admin_styles.css");
-    </script>
+    </script> -->
   </body>
 </html>
