--- a/admin/index.html
+++ b/admin/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-    <!-- <script>      
+    <script>      
         CMS.registerEditorComponent({
           // Internal id of the component
           id: "amendment",
@@ -73,7 +73,7 @@
 
     </script>
     <script>
-      CMS.registerPreviewStyle("admin_styles.css");
-    </script> -->
+      CMS.registerPreviewStyle("admin.css");
+    </script>
   </body>
 </html>
