--- a/admin/index.html
+++ b/admin/index.html
@@ -70,10 +70,55 @@
             return `<div class="amendment amendment-${data.status}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><span><p>${data.details}</p></span></div>`;
           }
         });
-
     </script>
-    <script>
-      CMS.registerPreviewStyle("admin.css");
+    <script>      
+        CMS.registerEditorComponent({
+          // Internal id of the component
+          id: "soc-comment",
+          // Visible label
+          label: "SOC Comment",
+          // Fields the user need to fill out when adding an instance of the component
+          fields: [
+            {
+              name: 'comment',
+              label: 'Comment',
+              widget: 'string'
+            }
+          ],
+          // Regex pattern used to search for instances of this block in the markdown document.
+          // Patterns are run in a multline environment (against the entire markdown document),
+          // and so generally should make use of the multiline flag (`m`). If you need to capture
+          // newlines in your capturing groups, you can either use something like
+          // `([\S\s]*)`, or you can additionally enable the "dot all" flag (`s`),
+          // which will cause `(.*)` to match newlines as well.
+          //
+          // Additionally, it's recommended that you use non-greedy capturing groups (e.g.
+          // `(.*?)` vs `(.*)`), especially if matching against newline characters.
+          pattern: /<div class="alert d-inline-block alert-primary"><p class="alert-title">SOC Note<\/p><p>(.*)<\/p><\/div>/ms,
+          // Given a RegExp Match object
+          // (https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/match#return_value),
+          // return an object with one property for each field defined in `fields`.
+          //
+          // This is used to populate the custom widget in the markdown editor in the CMS.
+          fromBlock: function(match) {
+            return {
+              comment: match[1],
+            };
+          },
+          // Given an object with one property for each field defined in `fields`,
+          // return the string you wish to be inserted into your markdown.
+          //
+          // This is used to serialize the data from the custom widget to the
+          // markdown document
+          toBlock: function(data) {
+            return `<div class="alert d-inline-block alert-primary"><p class="alert-title">SOC Note</p><p>${data.comment}</p></div>`;
+          },
+          // Preview output for this component. Can either be a string or a React component
+          // (component gives better render performance)
+          toPreview: function(data) {
+            return `<div class="alert d-inline-block alert-primary"><p class="alert-title">SOC Note</p><p>${data.comment}</p></div>`
+          }
+        });
     </script>
   </body>
 </html>
