--- a/admin/index.html
+++ b/admin/index.html
@@ -143,7 +143,7 @@
           //
           // Additionally, it's recommended that you use non-greedy capturing groups (e.g.
           // `(.*?)` vs `(.*)`), especially if matching against newline characters.
-          pattern: /<a href="\/files\/(.*?)">Download file<\/a>/ms,
+          pattern: /<a href="(.*?)">Download file<\/a>/ms,
           // Given a RegExp Match object
           // (https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/match#return_value),
           // return an object with one property for each field defined in `fields`.
@@ -160,12 +160,12 @@
           // This is used to serialize the data from the custom widget to the
           // markdown document
           toBlock: function(data) {
-            return `<a href="/files/${data.file}">Download file</a>`;
+            return `<a href="${data.file}">Download file</a>`;
           },
           // Preview output for this component. Can either be a string or a React component
           // (component gives better render performance)
           toPreview: function(data) {
-            return `<a href="/files/${data.file}">Download file</a>`;
+            return `<a href="${data.file}">Download file</a>`;
           }
         });
     </script>
