--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,7 @@
     <title>Content Manager</title>
     <!-- Include the identity widget -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="admin_styles.css">
   </head>
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
