testing preset status options

--- a/admin/index.html
+++ b/admin/index.html
@@ -26,7 +26,11 @@
             {
               name: 'status',
               label: 'Status',
-              widget: 'string'
+              widget: 'string',
+              options: {
+                label: 'good',
+                value: 'good'
+              }
             },
             {
               name: 'details',
