amending status options

--- a/admin/index.html
+++ b/admin/index.html
@@ -26,7 +26,7 @@
             {
               name: 'status',
               label: 'Status',
-              widget: 'string',
+              widget: 'select',
               options: {
                 label: 'good',
                 value: 'good'
