trying alternate route for test styles

--- a/admin/index.html
+++ b/admin/index.html
@@ -27,10 +27,14 @@
               name: 'status',
               label: 'Status',
               widget: 'select',
-              options: {
+              options: [{
                 label: 'good',
                 value: 'good'
-              }
+              },
+              {
+                label: 'bad',
+                value: 'bad'
+              }]
             },
             {
               name: 'details',
