okay, actual dropdown options now

--- a/admin/index.html
+++ b/admin/index.html
@@ -28,13 +28,22 @@
               label: 'Status',
               widget: 'select',
               options: [{
-                label: 'good',
-                value: 'good'
+                label: 'To Be Debated',
+                value: 'tbd'
               },
               {
-                label: 'bad',
-                value: 'bad'
-              }]
+                label: 'Passed',
+                value: 'passed'
+              },
+              {
+                label: 'Defeated',
+                value: 'defeated'
+              },
+              {
+                label: 'Out of Order',
+                value: 'OoO'
+              },
+            ]
             },
             {
               name: 'details',
