--- a/admin/index.html
+++ b/admin/index.html
@@ -27,6 +27,10 @@
               name: 'status',
               label: 'Status',
               widget: 'select',
+              default: {
+                label: "To Be Debated",
+                value: 'tbd'
+              },
               options: [{
                 label: 'To Be Debated',
                 value: 'tbd'
