--- a/admin/index.html
+++ b/admin/index.html
@@ -88,7 +88,7 @@
           // Preview output for this component. Can either be a string or a React component
           // (component gives better render performance)
           toPreview: function(data) {
-            return `<div class="amendment amendment-${data.status}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><span>${data.details}</span></div>`;
+            return `<div class="amendment amendment-${data.status.label}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><span>${data.details}</span></div>`;
           }
         });
     </script>
