--- a/admin/index.html
+++ b/admin/index.html
@@ -83,7 +83,8 @@
           // This is used to serialize the data from the custom widget to the
           // markdown document
           toBlock: function(data) {
-            return `<div class="amendment amendment-${data.status.label}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><span>${data.details}</span></div>`;
+            let test = "Testing";
+            return `<div class="amendment amendment-${test}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><span>${data.details}</span></div>`;
           },
           // Preview output for this component. Can either be a string or a React component
           // (component gives better render performance)
