--- a/admin/index.html
+++ b/admin/index.html
@@ -64,7 +64,7 @@
           //
           // Additionally, it's recommended that you use non-greedy capturing groups (e.g.
           // `(.*?)` vs `(.*)`), especially if matching against newline characters.
-          pattern: /<div class="amendment amendment-(.*?)">\n*\s*<div class="d-flex justify-content-between align-items-start">\n*\s*<h3 id="amendment-(\d*?)">Amendment #\d*?<\/h3>\n*\s*?<p class="badge bg-.*?">Amendment .*?<\/p>\n*\s*<\/div>\n*\s*<span>(.*)\n*?\s*?<\/span>\n*\s*?<\/div>/ms,
+          pattern: /<div class="amendment amendment-(.*?)">\n*\s*<div class="d-flex justify-content-between align-items-start">\n*\s*<h3 id="amendment-(\d*?)">Amendment #\d*?<\/h3>\n*\s*?<p class="badge bg-.*?">Amendment .*?<\/p>\n*\s*<\/div>\n*\s*<div>(.*)\n*?\s*?<\/div>\n*\s*?<\/div>/ms,
           // Given a RegExp Match object
           // (https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/match#return_value),
           // return an object with one property for each field defined in `fields`.
@@ -84,12 +84,13 @@
           // markdown document
           toBlock: function(data) {
             let test = "Testing";
-            return `<div class="amendment amendment-${test}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><span>${data.details}</span></div>`;
+            return `<div class="amendment amendment-${test}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><div>${data.details}</div></div>`;
           },
           // Preview output for this component. Can either be a string or a React component
           // (component gives better render performance)
           toPreview: function(data) {
-            return `<div class="amendment amendment-${data.status.label}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><span>${data.details}</span></div>`;
+            let test = "Testing";
+            return `<div class="amendment amendment-${test}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><div>${data.details}</div></div>`;
           }
         });
     </script>
