--- a/admin/index.html
+++ b/admin/index.html
@@ -83,14 +83,26 @@
           // This is used to serialize the data from the custom widget to the
           // markdown document
           toBlock: function(data) {
-            let test = "Testing";
-            return `<div class="amendment amendment-${test}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><div>${data.details}</div></div>`;
+            let statusLabel = "";
+            if (data.status == "tbd") {
+              statusLabel = "To Be Debated";
+            }
+            else {
+              statusLabel = data.status;
+            }
+            return `<div class="amendment amendment-${statusLabel}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><div>${data.details}</div></div>`;
           },
           // Preview output for this component. Can either be a string or a React component
           // (component gives better render performance)
           toPreview: function(data) {
-            let test = "Testing";
-            return `<div class="amendment amendment-${test}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><div>${data.details}</div></div>`;
+            let statusLabel = "";
+            if (data.status == "tbd") {
+              statusLabel = "To Be Debated";
+            }
+            else {
+              statusLabel = data.status;
+            }
+            return `<div class="amendment amendment-${statusLabel}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3><p class="badge bg-${data.status}">Amendment ${data.status}</p></div><div>${data.details}</div></div>`;
           }
         });
     </script>
