more testing to find the broken thing

--- a/admin/index.html
+++ b/admin/index.html
@@ -85,7 +85,7 @@
           toBlock: function(data) {
             let statusLabel = "";
             if (data.status == "tbd") {
-              statusLabel = "To Be Debated";
+              statusLabel = "To Be Dsebated";
             }
             else {
               statusLabel = data.status;
@@ -97,7 +97,7 @@
           toPreview: function(data) {
             let statusLabel = "";
             if (data.status == "tbd") {
-              statusLabel = "To Be Debated";
+              statusLabel = "To Be Dsebated";
             }
             else {
               statusLabel = data.status;
