amendments can have strings

--- a/admin/index.html
+++ b/admin/index.html
@@ -21,7 +21,7 @@
             {
               name: 'number',
               label: 'Number',
-              widget: 'number'
+              widget: 'string'
             },
             {
               name: 'status',
