trying to stip out amendment stuff

--- a/admin/index.html
+++ b/admin/index.html
@@ -73,9 +73,9 @@
           // This is used to populate the custom widget in the markdown editor in the CMS.
           fromBlock: function(match) {
             return {
-              status: match[1],
-              number: match[2],              
-              details: match[3]
+              status: match[1]
+              // number: match[2],              
+              // details: match[3]
             };
           },
           // Given an object with one property for each field defined in `fields`,
