--- a/admin/index.html
+++ b/admin/index.html
@@ -64,8 +64,7 @@
           //
           // Additionally, it's recommended that you use non-greedy capturing groups (e.g.
           // `(.*?)` vs `(.*)`), especially if matching against newline characters.
-          pattern: /(.*?)/ms,
-          // pattern: /<div class="amendment amendment-(.*?)">\n*\s*<div class="d-flex justify-content-between align-items-start">\n*\s*<h3 id="amendment-(\d*?)">Amendment #\d*?<\/h3>\n*\s*?<\/div>\n*\s*<div>(.*)\n*?\s*?<\/div>\n*\s*?<\/div>/ms,
+          pattern: /<div class="amendment amendment-(.*?)">\n*\s*<div class="d-flex justify-content-between align-items-start">\n*\s*<h3 id="amendment-(\d*?)">Amendment #\d*?<\/h3>\n*\s*?<\/div>\n*\s*<div>(.*)\n*?\s*?<\/div>\n*\s*?<\/div>/ms,
           // Given a RegExp Match object
           // (https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/match#return_value),
           // return an object with one property for each field defined in `fields`.
@@ -73,9 +72,9 @@
           // This is used to populate the custom widget in the markdown editor in the CMS.
           fromBlock: function(match) {
             return {
-              status: match[1]
-              // number: match[2],              
-              // details: match[3]
+              status: match[1],
+              number: match[2],              
+              details: match[3]
             };
           },
           // Given an object with one property for each field defined in `fields`,
@@ -84,14 +83,12 @@
           // This is used to serialize the data from the custom widget to the
           // markdown document
           toBlock: function(data) {
-            return `${data.details}`;
-            // return `<div class="amendment amendment-${data.status}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3></div><div>${data.details}</div></div>`;
+            return `<div class="amendment amendment-${data.status}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3></div><div>${data.details}</div></div>`;
           },
           // Preview output for this component. Can either be a string or a React component
           // (component gives better render performance)
           toPreview: function(data) {
-            return `${data.details}`;
-            // return `<div class="amendment amendment-${data.status}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3></div><div>${data.details}</div></div>`;
+            return `<div class="amendment amendment-${data.status}"><div class="d-flex justify-content-between align-items-start"><h3 id="amendment-${data.number}">Amendment #${data.number}</h3></div><div>${data.details}</div></div>`;
           }
         });
     </script>
