--- a/admin/index.html
+++ b/admin/index.html
@@ -60,7 +60,7 @@
           //
           // Additionally, it's recommended that you use non-greedy capturing groups (e.g.
           // `(.*?)` vs `(.*)`), especially if matching against newline characters.
-          pattern: /<div class="amendment amendment-(.*?)">\n*\s*<div class="d-flex justify-content-between align-items-start">\n*\s*<h3 id="amendment-(\d*?)">Amendment #\d*?<\/h3>\n*\s*?<\/div>\n*\s*<div>(.*)\n*?\s*?<\/div>\n*\s*?<\/div>/ms,
+          pattern: /<div class="amendment amendment-(.*?)">\s*?<div class="d-flex justify-content-between align-items-start">\s*?<h3 id="amendment-(.*?)">Amendment #.*?<\/h3>\s*?<\/div>\s*(.*?)\s*?<\/div>/ms,
           // Given a RegExp Match object
           // (https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/match#return_value),
           // return an object with one property for each field defined in `fields`.
